// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    transaction
     with Expenses =
    4.56
     and Incomes = 
    1.23
     
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    transactions
     with Expenses =
    1.23
     and Incomes = 
    4.56
     
  </h1>
</div>
`;
